# hair_modeling

./: README.md
src/: cut_image.py  pipeline.sh  pipeline_1.sh  prepro_image.py  solve_amb.py  visualize_dense.py
src/annotate/: annotate_dir.py  test.py
src/data_aug/: cluster.py  data_aug.sh  data_aug_ori.sh  object.cpp  simulator.cpp
src/data_aug/src/: CMakeLists.txt  FindSuiteSparse.cmake  autodiff.h  head.h  io.cpp  io.h  myvector.h  object.cpp  object.h  test.cpp  test.h  tri_face.cpp  tri_face.h  vertex.cpp  vertex.h
src/diffuse/: diffuse.sh
src/diffuse/src/: CMakeLists.txt  head.h  io.cpp  io.h  myvector.h  test.cpp
src/face/: face_fitting_2D_no_boundary.py  hair_deform.py
src/face_landmark_detection/: face_landmark_detection.py
src/face_landmark_detection/test/: 2d_landmark.txt  3d_landmark.txt  3d_landmark_proj.txt
src/obj_to_vtk/: convert.sh  filename.txt  obj_to_vtk.py  readme.txt
